<resources>
    <string name="app_name">Cric Thermometer</string>
    <string name="imgthermometer">imgThermometer</string>
    <string name="tvInfo">Did you know you can determine the temperature outside by counting the number of chirps the cricket makes? Just count the number of chirps one makes in (25 for Celsius and 14 for Farenheit) seconds and place that number in the box below:</string>
    <string name="etInput">Number of Chirps</string>
    <string name="radiobtnCelsius">Celsius</string>
    <string name="radiobtnFarenheit">Farenheit</string>
    <string name="btnCalculate">Calculate</string>
</resources>
